--- a/index.html
+++ b/index.html
@@ -5,30 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <title>Movie App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.google.com/specimen/Anton#standard-styles" rel="stylesheet"/>
+
+    <title>Anigelion</title>
   </head>
   <body>
     <header class="container">
       <div class="header__content">
-        <a href="index.html" class="header__logo">MovieApp</a>
+        <a href="index.html" class="header__logo">Anigelion</a>
         <form>
           <input type="text" class="header__search" placeholder="Поиск" />
         </form>
       </div>
     </header>
-    <div class="container">
+    <div class="container_movies">
       <div class="movies">
         <div class="movie">
             <div class="movie__cover-inner">
                 <img
-                    src="https://cdn.discordapp.com/attachments/770254742629646346/801134476276531240/1611074202881.jpg"
+                    src="https://cdn1.ozone.ru/s3/multimedia-o/6046080168.jpg"
                     class="movie__cover"
                 />
-                <div class="movie__cover--darced"></div>
+                <div class="movie__cover--darkened"></div>
+            </div>
+            <div class="movie_info">
+                <div class="movie__title">Tokyo Ghoul</div>
+                <div class="movie__category">Anime</div>
+                <div class="movie__average movie_average--green">10</div>
+            </div>
+        </div>
+        
+
+        <div class="movie">
+            <div class="movie__cover-inner">
+                <img
+                    src="https://img1.ak.crunchyroll.com/i/spire3/04b29833ccaaf2ee6bda1d08f2f02ecf1539039197_full.jpg"
+                    class="movie__cover"
+                />
+                <div class="movie__cover--darkened"></div>
+            </div>
+            <div class="movie_info">
+                <div class="movie__title">JoJo's Bizarre Adventure</div>
+                <div class="movie__category">Anime</div>
+                <div class="movie__average movie_average--green">10</div>
+            </div>
+        </div>
+
+
+
+
+        <div class="movie">
+            <div class="movie__cover-inner">
+                <img
+                    src="https://static.wikia.nocookie.net/ani-manga/images/d/de/Hunter_x_Hunter_Poster.jpg/revision/latest?cb=20210819154626&path-prefix=ru"
+                    class="movie__cover"
+                />
+                <div class="movie__cover--darkened"></div>
+            </div>
+            <div class="movie_info">
+                <div class="movie__title">Hunter × Hunter</div>
+                <div class="movie__category">Anime</div>
+                <div class="movie__average movie_average--green">10</div>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="movie">
+            <div class="movie__cover-inner">
+                <img
+                    src="https://avatars.mds.yandex.net/get-kinopoisk-image/1777765/ff14c060-0ffa-463d-9add-3d3d59948319/600x900"
+                    class="movie__cover"
+                />
+                <div class="movie__cover--darkened"></div>
             </div>
             <div class="movie_info">
                 <div class="movie__title">Evangelion</div>
@@ -36,6 +88,41 @@
                 <div class="movie__average movie_average--green">10</div>
             </div>
         </div>
+
+
+        <div class="movie">
+            <div class="movie__cover-inner">
+                <img
+                    src="https://static.wikia.nocookie.net/ani-manga/images/e/e2/One_Piece_Poster.jpg/revision/latest?cb=20210818142325&path-prefix=ru"
+                    class="movie__cover"
+                />
+                <div class="movie__cover--darkened"></div>
+            </div>
+            <div class="movie_info">
+                <div class="movie__title">One Piece</div>
+                <div class="movie__category">Anime</div>
+                <div class="movie__average movie_average--green">10</div>
+            </div>
+        </div>
+
+
+
+        <div class="movie">
+            <div class="movie__cover-inner">
+                <img
+                    src="https://flxt.tmsimg.com/assets/p10701949_b_v9_ah.jpg"
+                    class="movie__cover"
+                />
+                <div class="movie__cover--darkened"></div>
+            </div>
+            <div class="movie_info">
+                <div class="movie__title">Attack on Titan</div>
+                <div class="movie__category">Anime</div>
+                <div class="movie__average movie_average--green">10</div>
+            </div>
+        </div>
+
+
       </div>
     </div>
     <script src="js/app.js"></script>
